[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/floatingCam/MainScene.gd" type="Script" id=1]
[ext_resource path="res://assets/eyeBall.png" type="Texture" id=2]
[ext_resource path="res://assets/eye.png" type="Texture" id=3]
[ext_resource path="res://assets/face.png" type="Texture" id=4]
[ext_resource path="res://assets/smallOpen.png" type="Texture" id=5]
[ext_resource path="res://assets/bigOpen.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "middle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "small",
"speed": 5.0
} ]

[sub_resource type="AudioStreamMicrophone" id=2]

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("face/eye/eyeLid:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 0.176777, 0.176777, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.937255, 0.760784, 0.466667, 1 ), Color( 0.937255, 0.760784, 0.466667, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("face/eye2/eyeLid:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 0.183011, 0.18, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.937255, 0.760784, 0.466667, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="MainScene" type="Node2D"]
position = Vector2( 2.40797, 1.79795 )
script = ExtResource( 1 )

[node name="face" type="Node2D" parent="."]
position = Vector2( 361.586, 344.466 )
z_index = 10

[node name="face" type="Sprite" parent="face"]
modulate = Color( 1, 0.882353, 0.380392, 1 )
z_as_relative = false
texture = ExtResource( 4 )

[node name="eye" type="Sprite" parent="face"]
position = Vector2( -81.9998, -21.751 )
texture = ExtResource( 3 )

[node name="iris" type="Sprite" parent="face/eye"]
modulate = Color( 0.262745, 0.262745, 0.262745, 1 )
position = Vector2( 16, 0 )
scale = Vector2( 0.704225, 0.704225 )
texture = ExtResource( 3 )

[node name="pupil" type="Sprite" parent="face/eye"]
modulate = Color( 0.796078, 0.32549, 0.32549, 1 )
texture = ExtResource( 2 )

[node name="eyeLid" type="Sprite" parent="face/eye"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.806, -1.00955 )
scale = Vector2( 3.43198, 3.43198 )
texture = ExtResource( 2 )

[node name="eye2" type="Sprite" parent="face"]
position = Vector2( 106.352, -21.751 )
texture = ExtResource( 3 )

[node name="iris" type="Sprite" parent="face/eye2"]
modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
position = Vector2( 16, 0 )
scale = Vector2( 0.704225, 0.704225 )
texture = ExtResource( 3 )

[node name="pupil" type="Sprite" parent="face/eye2"]
modulate = Color( 0.490196, 0.156863, 0.156863, 1 )
texture = ExtResource( 2 )

[node name="eyeLid" type="Sprite" parent="face/eye2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.457153, -1.00955 )
scale = Vector2( 3.432, 3.432 )
texture = ExtResource( 2 )

[node name="mouth" type="AnimatedSprite" parent="face"]
modulate = Color( 1, 0.0745098, 0.964706, 1 )
position = Vector2( 12.578, 93.9225 )
frames = SubResource( 1 )
animation = "small"

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
volume_db = -80.0
autoplay = true
bus = "Record"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 3 )

[node name="lookatEr" type="Position2D" parent="."]
visible = false
position = Vector2( 179.376, 344.466 )

[node name="Sprite" type="Sprite" parent="lookatEr"]
z_index = 100
z_as_relative = false
texture = ExtResource( 3 )

[node name="moveTimer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="moveTimer" to="." method="_on_moveTimer_timeout"]
